<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginToSpotifyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textSize="30sp"
        android:layout_margin="24dp" />

    <Button
        android:id="@+id/loginToSpotifyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_to_spotify"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/listPlaylistsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_spotify_playlists"
        android:layout_margin="8dp"
        android:enabled="false" />

</LinearLayout>
